--- a/app/src/main/res/layout/activity_heroes.xml
+++ b/app/src/main/res/layout/activity_heroes.xml
@@ -6,16 +6,59 @@
     android:layout_height="match_parent"
     tools:context=".HeroesActivity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/heroesListView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_launcher_round" />
+
     <ListView
         android:id="@+id/heroesListView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textNickname"
+        android:layout_width="251dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="279dp"
+        android:layout_marginBottom="60dp"
+        android:text="Nickname"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/heroesListView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.145"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.272" />
+
+    <TextView
+        android:id="@+id/textLvl"
+        android:layout_width="111dp"
+        android:layout_height="19dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="42dp"
+        android:text="Lvl"
+        app:layout_constraintBottom_toTopOf="@+id/heroesListView"
+        app:layout_constraintEnd_toEndOf="@+id/textNickname"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textNickname"
+        app:layout_constraintTop_toBottomOf="@+id/textNickname"
+        app:layout_constraintVertical_bias="0.562" />
 </androidx.constraintlayout.widget.ConstraintLayout>
