--- a/app/src/main/res/layout/list_hero_view.xml
+++ b/app/src/main/res/layout/list_hero_view.xml
@@ -3,36 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     >
-
-    <ImageView
-        android:id="@+id/heroesImageView"
-        android:layout_width="426dp"
-        android:layout_height="180dp"
-        android:layout_marginTop="24dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:srcCompat="@mipmap/wraith_apex_legends" />
 
     <TextView
         android:id="@+id/textHeroView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Wraith"
-        android:textColor="#FFFFFF"
-        android:textSize="54sp"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/heroesImageView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
-        app:layout_constraintStart_toStartOf="@+id/heroesImageView"
-        app:layout_constraintTop_toTopOf="@+id/heroesImageView"
-        app:layout_constraintVertical_bias="0.04000002" />
-
+        app:layout_constraintHorizontal_bias="0.063"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
