--- a/app/src/main/res/layout/activity_heroes_stats.xml
+++ b/app/src/main/res/layout/activity_heroes_stats.xml
@@ -3,39 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
-
+    android:layout_height="match_parent"
+    tools:context=".HeroesStatsActivity">
 
     <ImageView
-        android:id="@+id/imageBanerHero"
-        android:layout_width="415dp"
-        android:layout_height="160dp"
+        android:id="@+id/imageHeroesAvatar"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@mipmap/wraith_apex_legends" />
+        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textHeroView"
-        android:layout_width="wrap_content"
+        android:id="@+id/textNameHero"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:text="Wraith"
-        android:textColor="@android:color/background_light"
-        android:textSize="24sp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="NameHero"
+        android:textColor="#393737"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageBanerHero"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/imageBanerHero"
-        app:layout_constraintTop_toTopOf="@+id/imageBanerHero"
-        app:layout_constraintVertical_bias="0.07999998" />
-
-
+        app:layout_constraintStart_toEndOf="@+id/imageHeroesAvatar"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
