--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorSecondaryVariant">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FCFCFC</color>
+    <color name="MyColor">#36f7fd</color>
 </resources>
