--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,8 +40,8 @@
         android:ems="10"
         android:fontFamily="sans-serif-medium"
         android:gravity="start|top"
+        android:singleLine="true"
         android:hint="Введите игровое имя"
-        android:inputType="textMultiLine"
         android:textColor="#F9F7F7"
         android:textSize="24sp"
         android:textStyle="bold"
