--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    
+    <color name="avatar_image_background">#E1E1E1</color>
+    <color name="blue_grey_700">#37474f</color>
+    <color name="grey_900">#212121</color>
 
     <color name="primaryColor">#ad1457</color>
     <color name="primaryLightColor">#e35183</color>
