--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.example.apextracker.view.fragments.HeroesFragment"
-        android:label="@string/title_home"
+        android:label="Heroes"
         tools:layout="@layout/fragment_home" />
 
     <fragment
