--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/navigation_home"
         android:name="com.example.apextracker.view.fragments.HeroesFragment"
         android:label="Heroes"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_heroes" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
