--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,7 +19,7 @@
 
     <FrameLayout
         android:id="@+id/frameLayout"
-        android:layout_width="121dp"
+        android:layout_width="140dp"
         android:layout_height="match_parent"
         android:layout_marginTop="57dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,7 +29,7 @@
 
         <ImageView
             android:id="@+id/iv_avatar"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:background="@color/avatar_image_background"
