--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,34 +19,49 @@
 
     <FrameLayout
         android:id="@+id/frameLayout"
-        android:layout_width="140dp"
-        android:layout_height="match_parent"
-        android:layout_marginTop="57dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_92sdp"
+        android:layout_marginEnd="@dimen/_218sdp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarProfile"
-        app:layout_constraintVertical_bias="0.89">
+        app:layout_constraintTop_toBottomOf="@+id/toolbarProfile">
 
         <ImageView
             android:id="@+id/iv_avatar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="left"
             android:background="@color/avatar_image_background"
             android:scaleType="fitXY"
             tools:srcCompat="@tools:sample/avatars" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right|end">
+
+            <ImageView
+                android:id="@+id/iv_devision"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_gravity="end|bottom"
+                android:elevation="@dimen/_10sdp"
+                tools:srcCompat="@tools:sample/avatars" />
+        </LinearLayout>
     </FrameLayout>
+
 
     <TextView
         android:id="@+id/tv_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
+        android:layout_marginStart="135dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="10dp"
         android:text="Username"
         android:textAlignment="textStart"
         android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@id/tv_division"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/frameLayout"
         app:layout_constraintTop_toBottomOf="@+id/toolbarProfile" />
@@ -55,12 +70,26 @@
         android:id="@+id/tv_division"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
+        android:layout_marginStart="135dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="50dp"
         android:text="Division"
         android:textAlignment="textStart"
+        app:layout_constraintBottom_toTopOf="@id/tvLevel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/frameLayout"
         app:layout_constraintTop_toBottomOf="@+id/tv_username" />
+
+    <TextView
+        android:id="@+id/tvLevel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="50dp"
+        android:text="Level"
+        android:textAlignment="textStart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/frameLayout"
+        app:layout_constraintTop_toBottomOf="@+id/tv_division" />
 </androidx.constraintlayout.widget.ConstraintLayout>
