--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_all_heroes">
 
     <fragment
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_all_heroes"
         android:name="com.example.apextracker.view.fragments.HeroesFragment"
-        android:label="Heroes"
+        android:label="@string/title_heroes"
         tools:layout="@layout/fragment_heroes" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.apextracker.view.fragments.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_match_history"
+        android:name="com.example.apextracker.view.fragments.MatchHistoryFragment"
+        android:label="@string/title_match_history"
+        tools:layout="@layout/fragment_match_history" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.apextracker.view.fragments.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_funny_videos"
+        android:name="com.example.apextracker.view.fragments.FunnyVideosFragment"
+        android:label="@string/title_funny_videos"
+        tools:layout="@layout/fragment_funny_videos" />
 </navigation>
