--- a/app/src/main/res/layout/item_heroes_layout.xml
+++ b/app/src/main/res/layout/item_heroes_layout.xml
@@ -22,17 +22,17 @@
     android:scaleType="fitXY"
     tools:src="@mipmap/ic_launcher"
     />
+
     <TextView
         android:id="@+id/tv_heroes_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_10sdp"
         android:layout_gravity="center_vertical"
-        android:textColor="@color/grey_900"
+        android:layout_margin="@dimen/_10sdp"
+        android:textColor="@color/gray_600"
         android:textSize="@dimen/_16sdp"
         android:textStyle="bold"
-        tools:text="Heroes title"
-        />
+        tools:text="Heroes title" />
 </LinearLayout>
 
 
