--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,9 @@
     <color name="avatar_image_background">#E1E1E1</color>
     <color name="blue_grey_700">#37474f</color>
     <color name="grey_900">#212121</color>
+    <color name="gray_700">#616161</color>
+    <color name="gray_600">#757575</color>
+    <color name="gray_500">#9E9E9E</color>
 
     <color name="primaryColor">#ad1457</color>
     <color name="primaryLightColor">#e35183</color>
