--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -60,7 +60,7 @@
         android:layout_marginEnd="10dp"
         android:text="Username"
         android:textAlignment="textStart"
-        android:textColor="@color/black"
+        android:textColor="@color/gray_600"
         app:layout_constraintBottom_toTopOf="@id/tv_division"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/frameLayout"
