--- a/app/src/main/res/layout/item_heroes_layout.xml
+++ b/app/src/main/res/layout/item_heroes_layout.xml
@@ -13,15 +13,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-<ImageView
-    android:id="@+id/iv_heroes_image"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/_150sdp"
-    android:layout_margin="@dimen/_1sdp"
-    android:contentDescription="@string/app_name"
-    android:scaleType="fitXY"
-    tools:src="@mipmap/ic_launcher"
-    />
+
+    <ImageView
+        android:id="@+id/iv_heroes_image"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_150sdp"
+        android:layout_margin="@dimen/_1sdp"
+        android:contentDescription="@string/app_name"
+        android:scaleType="fitXY"
+        tools:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/tv_heroes_title"
