FunnyVideosViewModel in work

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -33,7 +33,7 @@
         tools:layout="@layout/fragment_details_heroes">
             <argument
                 android:name="heroesDetails"
-                app:argType="com.example.apextracker.model.entities.Heroes"
+                app:argType="com.example.apextracker.model.entities.apex.Heroes"
                 />
 
 
