--- a/app/src/main/res/layout/fragment_funny_videos.xml
+++ b/app/src/main/res/layout/fragment_funny_videos.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".view.fragments.FunnyVideosFragment">
 
-    <com.google.android.exoplayer2.ui.PlayerView
+    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/videoView"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
+        app:videoId="S0Q4gqBUs7c"
+        app:autoPlay="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
